p2ws_package/Devpp2ws-Package/objects/Crew_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>CrewId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>Crew Mappings</relationshipLabel>
        <relationshipName>Crew_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Time__c</fullName>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Synced_Flights__c</fullName>
        <label>Synced Flights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Crew_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Crew Mapping</label>
    <listViews>
        <fullName>UAT_In_Flight</fullName>
        <columns>NAME</columns>
        <columns>CrewId__c</columns>
        <columns>UserId__c</columns>
        <columns>isActive__c</columns>
        <columns>Last_Sync_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Create Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000000}</displayFormat>
        <label>Crew Mapping No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>